src/metrics/snapshots/big_code_analysis__metrics__loc__tests__bash_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 7,
  "ploc": 3,
  "lloc": 2,
  "cloc": 1,
  "blank": 3,
  "sloc_average": 3.5,
  "ploc_average": 1.5,
  "lloc_average": 1.0,
  "cloc_average": 0.5,
  "blank_average": 1.5,
  "sloc_min": 5,
  "sloc_max": 7,
  "cloc_min": 0,
  "cloc_max": 1,
  "ploc_min": 3,
  "ploc_max": 3,
  "lloc_min": 2,
  "lloc_max": 2,
  "blank_min": 2,
  "blank_max": 3
}
