src/metrics/snapshots/big_code_analysis__metrics__loc__tests__bash_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 8,
  "ploc": 4,
  "lloc": 3,
  "cloc": 3,
  "blank": 1,
  "sloc_average": 4.0,
  "ploc_average": 2.0,
  "lloc_average": 1.5,
  "cloc_average": 1.5,
  "blank_average": 0.5,
  "sloc_min": 3,
  "sloc_max": 8,
  "cloc_min": 0,
  "cloc_max": 3,
  "ploc_min": 3,
  "ploc_max": 4,
  "lloc_min": 2,
  "lloc_max": 3,
  "blank_min": 0,
  "blank_max": 1
}
