src/metrics/snapshots/big_code_analysis__metrics__loc__tests__bash_multiple_functions_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6.0,
  "ploc": 6.0,
  "lloc": 4.0,
  "cloc": 0.0,
  "blank": 0.0,
  "sloc_average": 2.0,
  "ploc_average": 2.0,
  "lloc_average": 1.3333333333333333,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 3.0,
  "sloc_max": 6.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 3.0,
  "ploc_max": 6.0,
  "lloc_min": 2.0,
  "lloc_max": 4.0,
  "blank_min": 0.0,
  "blank_max": 0.0
}
