src/metrics/snapshots/big_code_analysis__metrics__loc__tests__bash_nested_function_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 7,
  "ploc": 7,
  "lloc": 5,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.3333333333333335,
  "ploc_average": 2.3333333333333335,
  "lloc_average": 1.6666666666666667,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 3,
  "sloc_max": 7,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 3,
  "ploc_max": 7,
  "lloc_min": 2,
  "lloc_max": 5,
  "blank_min": 0,
  "blank_max": 0
}
