src/metrics/snapshots/big_code_analysis__metrics__loc__tests__bash_no_zero_blank.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 6,
  "ploc": 5,
  "lloc": 4,
  "cloc": 2,
  "blank": 1,
  "sloc_average": 3.0,
  "ploc_average": 2.5,
  "lloc_average": 2.0,
  "cloc_average": 1.0,
  "blank_average": 0.5,
  "sloc_min": 6,
  "sloc_max": 6,
  "cloc_min": 2,
  "cloc_max": 2,
  "ploc_min": 5,
  "ploc_max": 5,
  "lloc_min": 4,
  "lloc_max": 4,
  "blank_min": 1,
  "blank_max": 1
}
